Final commit: fixed offcentered divs in home

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -28,3 +28,7 @@ input {
 .fa-magnifying-glass {
     background-color: #fff;
 }
+
+.zoek {
+    background-color: #fff;
+}
